--- a/css/style.css
+++ b/css/style.css
@@ -9,7 +9,7 @@ body {
 h1 {
     font-size: 80px;
     font-weight: normal;
-    margin: 0;
+    margin: 50px 0;
     font-family: 'Chelsea Market', Georgia, serif;
     color: #000;
     line-height: 1;
@@ -34,13 +34,11 @@ h3 {
 }
 
 h4 {
-    font-size: 28px;
+    font-size: 30px;
     font-weight: normal;
-    margin: 0 100px;
-    margin-top: 40px;
+    margin: 40px auto;
     text-align: center;
 }
-
 
 p {
     width: 960px;
@@ -55,35 +53,32 @@ a, a:visited {
     text-decoration: none;
 }
 
-a:hover {
-    text-decoration: underline;
+a:hover {text-decoration: underline;}
+
+ul {list-style: none;}
+
+dl {
+    width : 960px;
+    margin: 30px auto;
 }
 
-ul {
-    list-style: none;
+dt {font-size: 27px;}
+
+table {
+    width : 700px;
+    margin: 30px auto;
+    border-collapse:collapse;
 }
 
-.download {
-    padding: 10px;
-}
-
-pre {
-    font-size: 18px;
-}
-
-blockquote {
-    text-align: left;
-    width: 720px;
-    margin: 10px auto;
-    background: #C5C3DE;
-    border: solid 2px #69697A;
-    padding: 0 40px;
+table tr, table th, table td { 
+    border: 1px solid #fff;
+    padding: 5px;
 }
 
 code {
     background-color: #000;
     font-style: normal;
-    border-radius: 10px;
+    border-radius: 15px;
     color: white;
     padding: 5px 15px;
     font-family: menlo, monospace;
@@ -100,109 +95,24 @@ code {
 }
 
 
-.block-title { background-color: #FFF; padding-bottom: 50px; text-align: center;}
+.block-title { 
+    background-color: #FFF; 
+    padding: 20px 0 50px; 
+    text-align: center;
+}
 .block-title h2 { color: #000; }
-.block-title .meta { font-size: 16px; color: #999; }
-.block-title .meta a { font-size: 16px; color: #333; }
 .block-title .navlist li {
     display: inline;
     list-style-type: none;
     padding-right: 20px;
     font-size: 30px;
 }
+.block-title .navlist a {font-size: 30px; color: #000;}
 
-.block-setup { background-color: #348fd4; }
-.block-setup h2 { color: #06406c; }
-.block-setup h2 a { background: none; padding: 0; font-size: normal; }
-.block-setup a { color: #FFF; font-size: 40px; font-weight: normal;font-style: normal; background-color: #06406c; padding: 10px 15px; border-radius: 10px; text-decoration: none; }
-.block-setup a:hover { text-decoration: underline; }
+.white { background-color: #fff; color: #000;}
+.white p { color: #000;}
+.white code { background-color: #000; color: #fff;}
 
-.block-create { background-color: #06406c; }
-.block-create h2 { color: #FFF; }
-.block-create p { color: #FFF; }
-.block-create code { background-color: #000; color: #FFF; }
-
-.block-checkout { background-color: #FFF; }
-.block-checkout h2 { color: #000; }
-
-.block-trees { background-color: #4c0d09; }
-.block-trees h2 { color: #d3b2af; }
-.block-trees p { color: #d3b2af; }
-.block-trees code { color: #000; background-color: white; }
-
-.block-add { background-color: #cc4037; }
-.block-add h2, .block-add p { color: #4c0d09; }
-
-.block-remote { background-color: #ffc19f; }
-.block-remote h2 { color: #cc4037; }
-
-.block-branching { background-color: #000; }
-.block-branching h2 { color: #FFF; }
-.block-branching p { color: #DDD; }
-.block-branching code { color: #000; background-color: white; }
-
-.block-merging { background-color: #F2F2F2; }
-.block-merging h2 { color: #666; }
-
-.block-tagging { background-color: #F2F2F2; }
-.block-tagging h2 { color: #FFF; }
-.block-tagging { background-color: #348fd4; }
-.block-tagging h2 { color: #06406c; }
-
-.block-hints { background-color: #F2F2F2; }
-.block-hints h2 { color: #FFF; }
-
-.block-resources { background-color: #ffc19f; }
-.block-resources h2 { color: #cc4037; }
-.block-resources h3 { color: #7d1f19; }
-.block-resources ul { list-style: disc; margin: 0; padding: 0; }
-.block-resources ul li a { font-size: 24px; color: #cc4037; }
-
-
-
-.block-hints { background-color: #06406c; }
-
-.block-hints p { color: #FFF; }
-.block-hints code { background-color: #000; color: #FFF; }
-
-.block-checkout-replace { background-color: #fff8c9; }
-.block-checkout-replace h2 { color: #2d2700; }
-.block-checkout-replace p { color: #615400; }
-
-.block-comments { background-color: #FFF; padding-bottom: 50px; font-size: 14px; color: #000; }
-.block-comments h2 { color: #000; }
-.block-comments h3 { font-size: 16px; }
-.block-comments #disqus_thread { width: 600px; text-align: left; margin-left: auto; margin-right: auto; }
-
-
-
-
-
-
-.block-chmod { background-color: #06406c; color: #FFF; }
-.block-chmod h2 { color: #FFF; }
-.block-chmod h4 { color: #FFF; }
-.block-chmod p { color: #FFF; }
-.block-chmod code { background-color: #000; color: #FFF; }
-.block-chmod table, .block-chmod table td  { border: 1px solid #4C4C4C; cel}
-
-
-.tower {
-    display: block;
-    width: 180px;
-    height: 260px;
-    position: absolute;
-    top: 330px;
-    right: 0;
-    background: #FFF url(../img/git-tower.png) no-repeat;
-}
-
-.cheatsheet {
-    display: block;
-    width: 180px;
-    height: 250px;
-    position: absolute;
-    top: 346px;
-    left: 0;
-    background: #FFF url(../img/cheatsheet.png) no-repeat;
-}
+.dark { background-color: #000; color: #fff; }
+.dark p { color: #fff; }
+.dark code { background-color: #fff; color: #000; }
