--- a/css/style.css
+++ b/css/style.css
@@ -4,14 +4,14 @@ body {
     font-size: 23px;
     margin: 0;
     padding: 0;
+    color: #000;
 }
 
 h1 {
     font-size: 80px;
     font-weight: normal;
-    margin: 50px 0;
+    margin: 40px 0;
     font-family: 'Chelsea Market', Georgia, serif;
-    color: #000;
     line-height: 1;
     text-align:center;
 }
@@ -20,7 +20,6 @@ h2 {
     font-size: 72px;
     font-weight: normal;
     margin: 0;
-    color: #FFB000;
     font-family: 'Chelsea Market', Georgia, serif;
     text-transform: lowercase;
     text-align:center;
@@ -37,13 +36,13 @@ h4 {
     font-size: 30px;
     font-weight: normal;
     margin: 40px auto;
+    padding: 0px 40px;
     text-align: center;
 }
 
 p {
     width: 960px;
     margin: 30px auto;
-    color: #000;
     line-height: 200%;
 }
 
@@ -52,16 +51,10 @@ a, a:visited {
     font-size: 12px;
     text-decoration: none;
 }
-
 a:hover {text-decoration: underline;}
 
 ul {list-style: none;}
-
-dl {
-    width : 960px;
-    margin: 30px auto;
-}
-
+dl {width : 960px; margin: 30px auto;}
 dt {font-size: 27px;}
 
 table {
@@ -70,10 +63,7 @@ table {
     border-collapse:collapse;
 }
 
-table tr, table th, table td { 
-    border: 1px solid #fff;
-    padding: 5px;
-}
+table tr, table th, table td { padding: 5px;}
 
 code {
     background-color: #000;
@@ -84,7 +74,34 @@ code {
     font-family: menlo, monospace;
 }
 
-/*---------------------------------------- BLOCKS */
+
+#top-link {
+    -moz-border-bottom-colors: none;
+    -moz-border-image: none;
+    -moz-border-left-colors: none;
+    -moz-border-right-colors: none;
+    -moz-border-top-colors: none;
+    background: url("../img/top-arrow.png") no-repeat scroll 5px center #EBEBEB;
+    border-color: rgba(54, 54, 54, 0.5) rgba(54, 54, 54, 0.5) -moz-use-text-color;
+    border-radius: 10px 10px 0 0;
+    border-style: solid solid none;
+    border-width: 4px 4px medium;
+    bottom: 0;
+    color: #333333;
+    cursor: pointer;
+    display: none;
+    font-size: 14px;
+    font-weight: bold;
+    margin: 7px 7px 0;
+    padding: 10px 10px 10px 20px;
+    position: fixed;
+    right: 5px;
+    text-decoration: none;
+    text-shadow: 1px 1px 0 #FFFFFF;
+    z-index: 10;
+}
+
+/*  BLOCKS */
 
 .block {
     position: relative;
@@ -92,14 +109,10 @@ code {
     width: 100%;
     padding-top: 80px;
     padding-bottom: 80px;
+    background-color: #fff; color: #000; 
 }
 
-
-.block-title { 
-    background-color: #FFF; 
-    padding: 20px 0 50px; 
-    text-align: center;
-}
+.block-title { padding: 20px 0 50px; text-align: center; }
 .block-title h2 { color: #000; }
 .block-title .navlist li {
     display: inline;
@@ -108,11 +121,77 @@ code {
     font-size: 30px;
 }
 .block-title .navlist a {font-size: 30px; color: #000;}
+.block-title .meta { font-size: 16px; color: #999; }
+.block-title .meta a { font-size: 16px; color: #333; }
 
-.white { background-color: #fff; color: #000;}
-.white p { color: #000;}
-.white code { background-color: #000; color: #fff;}
+/* Brown */
+.block-ls { background-color: #5E412F; color: #FCEBB6; }
+.block-ls code { background-color: #fff; color: #000; }
 
-.dark { background-color: #000; color: #fff; }
-.dark p { color: #fff; }
-.dark code { background-color: #fff; color: #000; }
+/* Cream */
+.block-cd { background-color: #FCEBB6; color: #5E412F; }
+.block-cd code { background-color: #000; color: #fff; }
+
+/* Blue */
+.block-cp { background-color: #65b7f4; color: #06406C; }
+.block-cp code { background-color: #000; color: #fff;}
+
+/* Dark blue */
+.block-mv { background-color: #06406C; color: #65b7f4; }
+.block-mv code { background-color: #000; color: #fff;}
+
+/* White */
+.block-rm { background-color: #F0F0D8; color: #000; }
+.block-rm code { background-color: #000; color: #fff;}
+
+/* Dark green */
+.block-mkdir { background-color: #607848; color: #d1e875; }
+.block-mkdir code { background-color: #fff; color: #000;}
+
+/* Green */
+.block-chmod { background-color: #789048; color: #31440b; }
+.block-chmod code { background-color: #fff; color: #000;}
+
+/* light green */
+.block-chown { background-color: #C0D860; color: #29310b; }
+.block-chown code { background-color: #000; color: #fff;}
+
+/* Yellow */
+.block-packages { background-color: #ddd285; color: #6e5918; }
+.block-packages code { background-color: #000; color: #fff;}
+
+/* Red */
+.block-ssh { background-color: #6c0606; color: #D3B2AF; }
+.block-ssh code { background-color: #fff; color: #000;}
+
+/* Brown */
+.block-scp { background-color: #5E412F; color: #FCEBB6; }
+.block-scp code { background-color: #fff; color: #000; }
+
+/* Cream */
+.block-rsync { background-color: #FCEBB6; color: #5E412F; }
+.block-rsync code { background-color: #000; color: #fff; }
+
+/* Blue */
+.block-sed { background-color: #65b7f4; color: #06406C; }
+.block-sed code { background-color: #000; color: #fff;}
+
+/* Dark blue */
+.block-grep { background-color: #06406C; color: #65b7f4; }
+.block-grep code { background-color: #000; color: #fff;}
+
+/* White */
+.block-find { background-color: #F0F0D8; color: #000; }
+.block-find code { background-color: #000; color: #fff;}
+
+/* Dark green */
+.block-archives { background-color: #607848; color: #d1e875; }
+.block-archives code { background-color: #fff; color: #000;}
+
+/* Green */
+.block-process { background-color: #789048; color: #31440b; }
+.block-process code { background-color: #fff; color: #000;}
+
+/* Green */
+.block-link { background-color: #789048; color: #31440b; }
+.block-link code { background-color: #fff; color: #000;}
